# pmmtool_sh

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/moe/tqlwsl/pmmtool_sh/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: xposed_init
app/src/main/cpp/: CMakeLists.txt  main.cpp  main.h
app/src/main/java/moe/tqlwsl/pmmtool_sh/: xp.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/moe/tqlwsl/pmmtool_sh/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
